--- a/Navstyle.css
+++ b/Navstyle.css
@@ -1,18 +1,16 @@
-*{
-  margin: 0;
-  padding: 0;
-  font-family: "montserrat",sans-serif;
-}
 body {
   background: #000000;
 }
-.header{
-  height: 100px;
-  background: #000000;
-  padding: 0 20px;
-
+.header {
+  height: 700px;
+  width 100%;
+  background-image: url(Nestrabonita.jpeg);
+  background-position: center;
+  background-repeat: no-repeat;
+  padding:0 0;
+  margin: 0 0;
+  z-index: -1;
 }
-
 .logo{
   color: #39ff14;
   line-height: 100px;
@@ -20,6 +18,7 @@ body {
   padding-top: 5px;
   text-align:center;
   text-transform: uppercase;
+  padding-top: 500px;
 }
 
 .menu{
@@ -66,16 +65,14 @@ body {
   background: #000000;
   color: #fff;
   text-align: center;
-  padding-top: 100px;
 }
 .content img{
   display: block;
   margin-left: auto;
   margin-right: auto;
-  padding-top: 50px;
-  width: 55%;
-  border-radius: 60%;
-}
+  width: 100%;
+  height:auto;
+  }
 .content p{
   text-align: center;
 }
